# simple-screen-recorder-pc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: AudioCapture.hpp  Controller.hpp  RegionSelector.hpp  ScreenCapture.hpp  VideoEncoder.hpp  VisualEffects.hpp  WebcamDevice.hpp
installer/: SimpleScreenRecorder.iss
src/: AudioCapture.cpp  Controller.cpp  RegionSelector.cpp  ScreenCapture.cpp  VideoEncoder.cpp  VisualEffects.cpp  WebcamDevice.cpp  main.cpp  resources.rc
